--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,7 @@
  *= require_tree .
  *= require_self
  */
- 
+@import 'layman';
 @import 'normalize';
 
 html, body {
@@ -225,11 +225,11 @@ a {
 				font-size: 1.1em;
 				line-height: 1.75;
 			}
-		
+
 		}
 	}
-	
-	
+
+
 	.links {
 		margin: 2em 0;
 	}
