--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,44 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Tumblr2</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+  <div id="bit2"><div id="post_content"> <title>Tumblr</title><div/>
+
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', 'http://fonts.googleapis.com/css?family=Raleway:400,700' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= favicon_link_tag 'favicon.ico' %>
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
   </head>
 
   <body>
+    <div id="sidebar">
+      <ul>
+        <div id="bite"><li class"category><%= link_to "Tumbl", root_path %>r</li></div></br>
+        <li><%= link_to "Posts", root_path %></li>
+        <li>About</li>
+
+        </ul>
+        <p class="sign_in">User Login</p>
+
+      </div>
+
+    <div id="main_content">
+      <div id="header">
+        <p>Post Feed</p>
+      <div class="buttons">
+        <button class="button"><%= link_to "make Post", new_post_path %></button>
+        <button class="button">Log Out</button>
+
+      </div>
+    </div>
+
+      <% flash.each do |name, msg| %>
+         <%= content_tag(:div, msg, class: "alert") %>
+         <% end %>
+
     <%= yield %>
+</div>
   </body>
 </html>
