--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,16 +1,21 @@
-<h1>make something</h1>
-<%= form_for :post, url: posts_path do |f| %>
- <p>
-   <%= f.label :title %><br>
-   <%= f.text_field :title %>
-   </p>
+<div id="page_wrapper">
+  <div id="bit1"><h1>Make Something</h1></div>
+  <div id="bit2">
+        <%= form_for :post, url: posts_path do |f| %>
+         <p>
+           <%= f.label :title %><br>
+           <%= f.text_field :title %>
+           </p>
 
-    <p>
-      <%= f.label :body %><br>
-      <%= f.text_area :body %>
-      </p>
+            <p>
+              <%= f.label :body %><br>
+              <%= f.text_area :body %>
+              </p>
 
-      <p>
-    <%= f.submit %>
-    </p>
-   <% end %>
+              <p>
+            <%= f.submit %>
+            </p>
+    </div>
+     <% end %>
+
+</div>
