edit and delete

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,4 @@
 <div id="page_wrapper">
-  <div id="bit1"><h1>Make Something</h1></div>
+  <div id="bit1"><h1>Fix Post</h1></div>
   <%= render 'form' %>
 </div>
