--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,13 +1,12 @@
 <div id="post_content">
- <h1 class="title">
-   <%= @post.title %>
-   </h1>
-
+  <h1 class="title"><div class="button2"><%= @post.title %></div>
+  </h1>
    <p class="date">
-    Submitted <%= time_ago_in_words(@post.created_at) %>
+  Submitted <%= time_ago_in_words(@post.created_at) %> ago
+
+
    </p>
 
    <p class="body">
-     <%= @post.body %>
-     </p>
-</div>
+     <%= @post.body %>&nbsp;
+     </p> &nbsp;&nbsp; </div><div class="button1"><p><%= link_to 'Edit', edit_post_path(@post) %></p></div> <div class="button1"><p><%= link_to 'Delete', post_path(@post), method: :delete, data: { confirm: 'Are You Sure?'} %></p></div>
