--- a/app/assets/stylesheets/lay.scss
+++ b/app/assets/stylesheets/lay.scss
@@ -79,3 +79,68 @@ a {
  text-decoration: none;
  color: fff;
 }
+
+.point1 {
+    font-style: italic;
+    font-family: "muli italic", sans-serif;
+    font-weight: 500;
+    text-shadow: 0.5px 0.4px 2px #555;
+    color: fff;
+    text-decoration-color: black;
+    color: orange;
+		font-size: 90%;
+		padding: 10vw;
+		margin: 4.5vw;
+		border-style: solid;
+  }
+
+  .boder {
+
+    color: grey;
+    text-align: justify;
+		font-size: 1.2vw;
+
+
+    flex-wrap: wrap;
+
+
+  }
+
+  .button-sec {
+              color: grey;
+              text-shadow:  1px 1px rgba(1, 1, 6, 0.2);
+               background: -webkit-gradient;
+               border-radius: 1px;
+               flex: 10 0 10px;
+               margin: 0.2px;
+                border: 1px solid #ccc;
+                box-shadow: 2px 2px 2px 0px  rgba(0,2,0,0.3);
+
+
+
+            }
+
+
+
+.mybutton1 {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #599bb3), color-stop(1, #718285));
+	background:-moz-linear-gradient(top, #599bb3 5%, #718285 100%);
+	background:-webkit-linear-gradient(top, #599bb3 5%, #718285 100%);
+	background:-o-linear-gradient(top, #599bb3 5%, #718285 100%);
+	background:-ms-linear-gradient(top, #599bb3 5%, #718285 100%);
+	background:linear-gradient(to bottom, #599bb3 5%, #718285 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#599bb3', endColorstr='#718285',GradientType=0);
+	background-color:#599bb3;
+	-moz-border-radius:28px;
+	-webkit-border-radius:28px;
+	border-radius:28px;
+	border:1px solid #29668f;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:20px;
+	padding:8px 15px;
+	text-decoration:none;
+	text-shadow:4px 0px 10px #3d768a;
+}
