--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <ul>
         <div id="bite"><li class"category><%= link_to "Tumbl", root_path %>r</li></div></br>
         <li><%= link_to "Posts", root_path %></li>
-        <li>About</li>
+        <li><%= link_to "About", about_path %></li>
 
         </ul>
         <p class="sign_in">User Login</p>
@@ -26,7 +26,16 @@
 
     <div id="main_content">
       <div id="header">
+
+        <% if current_page?(root_path) %>
         <p>Post Feed</p>
+        <% elsif current_page?(about_path) %>
+        <p>Tumblr<p>
+          <% else %>
+        <%= link_to "Back to Main Page", root_path %>
+        <% end %>
+
+
       <div class="buttons">
         <button class="button"><%= link_to "make Post", new_post_path %></button>
         <button class="button">Log Out</button>
