--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,9 @@
         <li><%= link_to "About", about_path %></li>
 
         </ul>
-        <p class="sign_in">User Login</p>
+        <% if !user_signed_in? %>
+
+         <p class="sign_in"><%= link_to "User Login", new_user_session_path %></p><%end%>
 
       </div>
 
@@ -36,12 +38,16 @@
         <% end %>
 
 
-      <div class="buttons">
-        <button class="button"><%= link_to "make Post", new_post_path %></button>
-        <button class="button">Log Out</button>
+
+  <div class="buttons">
+    <% if user_signed_in? %>
+    <button class="button"><%= link_to "make Post", new_post_path %></button>
+    <button class="button"><%= link_to "Sign Out", destroy_user_session_path, method: :delete %><%end%></button>
 
       </div>
+
     </div>
+
 
       <% flash.each do |name, msg| %>
          <%= content_tag(:div, msg, class: "alert") %>
