--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,13 +4,21 @@
    <p class="date">
   Submitted <%= time_ago_in_words(@post.created_at) %> ago</p>
 
+
    <p class="body">
      <%= @post.body %>&nbsp;
-      </p></div><div class="button1"><p><%= link_to 'Edit', edit_post_path(@post) %></p></div> <div class="button1"><p><%= link_to 'Delete', post_path(@post), method: :delete, data: { confirm: 'Are You Sure?'} %></p>
-       </div><br><div id="comments">
+      </p></div>
 
-         <h2>( <%= @post.comments.count%>  )  Comments </h2>
-         <div class="boder"> <%=render @post.comments %></div><br>
-         <h3> Join Discussion:</h3>
-         <%= render 'comments/form'%>
-       </div>
+
+         <% if user_signed_in? %>
+       <div class="button1"><p>
+         <%= link_to 'Edit', edit_post_path(@post) %></p></div> <div class="button1"><p><%= link_to 'Delete', post_path(@post), method: :delete, data: { confirm: 'Are You Sure?'} %></p>
+         </div><% end %>
+
+    <br><div id="comments">
+
+   <h2>( <%= @post.comments.count%>  )  Comments </h2>
+   <div class="boder"> <%=render @post.comments %></div><br>
+   <h3> Join Discussion:</h3>
+   <%= render 'comments/form'%>
+ </div>
