--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,12 +10,13 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
+ /*
  *= require_self
  */
-@import 'lay'; 
-@import 'layman';
+@import "lay.css.scss";
+@import "layman.css.scss";
 @import 'normalize';
+@import "comments.css.scss";
 
 html, body {
 	font-family: 'PT Sans Narrow', sans-serif;
