--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,9 +25,10 @@
         <br>
         <br>
 
-         <p class="sign_in"><%= link_to "User Login", new_user_session_path %></p><%end%>
+         <p class="sign_in"><%= link_to "User Login", new_user_session_path %></p>
 
       </div>
+      <%end%>
 
     <div id="main_content">
       <div id="header">
