--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,20 +15,22 @@
   <body>
     <div id="sidebar">
       <ul>
-        <div id="bite"><li class"category><%= link_to "Tumbl", root_path %>r</li></div></br>
-        <li><%= link_to "Posts", root_path %></li>
-        <li><%= link_to "About", about_path %></li>
+        <% if !user_signed_in? %>
+
+
+
+         <p class="sign_in"><%= link_to "User Login", new_user_session_path %></p><%end%>
+         </br>
+         <div id="bite"><li class"category><%= link_to "Tumbl", root_path %>r</li></div></br>
+         <li><%= link_to "Posts", root_path %></li>
+         <li><%= link_to "About", about_path %></li>
 
         </ul>
 
-        <% if !user_signed_in? %>
-        <br>
-        <br>
 
-         <p class="sign_in"><%= link_to "User Login", new_user_session_path %></p>
 
       </div>
-      <%end%>
+
 
     <div id="main_content">
       <div id="header">
