--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <div id="post_content">
-  <h1 class="title"><div class="button2"><%= @post.title %></div>
+  <h1 class="title"><%= @post.title %>
   </h1>
    <p class="date">
   Submitted <%= time_ago_in_words(@post.created_at) %> ago</p>
